@@ -1,43 +1,42 @@
 package mx.uam.integracion.casa.Casa.Controllers;
 
-import mx.uam.integracion.casa.Casa.dto.UserDTO;
+import mx.uam.integracion.casa.Casa.dto.UsuarioDTO;
 import mx.uam.integracion.casa.Casa.service.userService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Arrays;
 import java.util.List;
 
 @RestController
 @RequestMapping("/v1")
 public class userController {
-    private final userService userService;
+    private final userService usuarioService;
 
-    public userController(userService userService) {
-        this.userService = userService;
+    public userController(userService usuarioService) {
+        this.usuarioService = usuarioService;
     }
 
     @PostMapping("/user")
-    public ResponseEntity<UserDTO> createUser(@RequestBody UserDTO userDTO) {
-        UserDTO createdUser = userService.createUser(userDTO);
-        return ResponseEntity.ok(createdUser);
+    public ResponseEntity<UsuarioDTO> createUsuario(@RequestBody UsuarioDTO usuarioDTO) {
+        UsuarioDTO createdUsuario = usuarioService.createUsuario(usuarioDTO);
+        return ResponseEntity.ok(createdUsuario);
     }
 
     @GetMapping("/user")
-    public ResponseEntity<List<UserDTO>> getUsers() {
-        List<UserDTO> users = Arrays.asList(userService.getAllUsers());
-        return ResponseEntity.ok(users);
-    }
-
-    @DeleteMapping("/user/{id}")
-    public ResponseEntity<Void> deleteUser(@PathVariable String id) {
-        userService.deleteUser(id);
-        return ResponseEntity.noContent().build();
+    public ResponseEntity<List<UsuarioDTO>> getUsuarios() {
+        List<UsuarioDTO> usuarios = List.of(usuarioService.getAllUsuarios());
+        return ResponseEntity.ok(usuarios);
     }
 
     @PutMapping("/user/{id}")
-    public ResponseEntity<UserDTO> updateUser(@PathVariable String id, @RequestBody UserDTO userDTO) {
-        UserDTO updatedUser = userService.updateUser(id, userDTO);
-        return ResponseEntity.ok(updatedUser);
+    public ResponseEntity<UsuarioDTO> updateUsuario(@PathVariable Long id, @RequestBody UsuarioDTO usuarioDTO) {
+        UsuarioDTO updatedUsuario = usuarioService.updateUsuario(id, usuarioDTO);
+        return ResponseEntity.ok(updatedUsuario);
+    }
+
+    @DeleteMapping("/user/{id}")
+    public ResponseEntity<Void> deleteUsuario(@PathVariable Long id) {
+        usuarioService.deleteUsuario(id);
+        return ResponseEntity.noContent().build();
     }
 }
